--- a/molecules/coupon.html
+++ b/molecules/coupon.html
@@ -1,150 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- styles -->
-    <link rel="stylesheet" href="../assets/css/aos.css">
-    <link rel="stylesheet" href="../assets/css/slick.css">
-    <link rel="stylesheet" href="../assets/css/slick-theme.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <!-- styles -->
-    <title>Document</title>
-  </head>
-  <body style="padding: 10px;">
-    <!-- Coupon start -->
-    <div href="#" class="wu-coupon">
-      <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <div class="wu-coupon__img">
-          <img src="../assets/images/coupon-qr.png" alt="QR code">
-        </div>
-        <div class="wu-coupon__share">
-          <img src="../assets/images/coupon-share.svg" alt="">
-        </div>
-      </div>
-      <div class="wu-coupon__right">
-        <div class="wu-coupon__status">
-          Redeemed
-        </div>
-        <div class="wu-coupon__price">
-          $<span>5.00</span>
-        </div>
-        <div class="wu-coupon__transac">
-          Transaction total of <span>$500</span> 
-        </div>
-        <div class="wu-coupon__valid">
-          Valid until 30 April 2023
-        </div>
-        <div class="wu-coupon__right_arrow">
-          <svg viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_26_53817)">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M2.03992 0.0674234L9.93184 7.83638C10.0243 7.92302 10.0243 8.07224 9.93184 8.16369L2.03992 15.9326C1.95229 16.0241 1.83057 16.0241 1.73807 15.9326L0 14.2142L6.14898 8.16369C6.2074 8.07705 6.2074 7.92783 6.14898 7.83638L0 1.78583L1.73807 0.0674234C1.82571 -0.0192192 1.94742 -0.0192192 2.03992 0.0674234Z" fill="#FFDD00"/>
-            </g>
-            <defs>
-            <clipPath id="clip0_26_53817">
-            <rect width="10" height="16" fill="white"/>
-            </clipPath>
-            </defs>
-            </svg>
-        </div>
-      </div>
-      <!-- yellow div -->
-      <div class="wu-coupon__hid">
-        <div class="wu-coupon__hidouter">
-          <h4 class="wu-coupon__terms">Terms & conditions</h4>
-          <ul class="wu-coupon__list">
-            <li>Minimum total transaction of $200.</li>
-            <li>Redeemable at all Western Union Outlets in SG.</li>
-            <li>Not valid with any other discounts & promotions.</li>
-            <li>No cash value.</li>
-            <li>Promo ends: 30 April 2023.</li>
-          </ul>
-          <div class="wu-coupon__right_arrow wu-coupon__right_arrow--left">
-            <svg viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_26_53817)">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M2.03992 0.0674234L9.93184 7.83638C10.0243 7.92302 10.0243 8.07224 9.93184 8.16369L2.03992 15.9326C1.95229 16.0241 1.83057 16.0241 1.73807 15.9326L0 14.2142L6.14898 8.16369C6.2074 8.07705 6.2074 7.92783 6.14898 7.83638L0 1.78583L1.73807 0.0674234C1.82571 -0.0192192 1.94742 -0.0192192 2.03992 0.0674234Z" fill="#FFDD00"></path>
-              </g>
-              <defs>
-              <clipPath id="clip0_26_53817">
-              <rect width="10" height="16" fill="white"></rect>
-              </clipPath>
-              </defs>
-              </svg>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- styles -->
+  <link rel="stylesheet" href="../assets/css/aos.css">
+  <link rel="stylesheet" href="../assets/css/slick.css">
+  <link rel="stylesheet" href="../assets/css/slick-theme.css">
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <!-- styles -->
+  <title>Document</title>
+</head>
+
+<body style="padding: 10px;">
+  <div class="wu-my-coupons">
+    <!-- Yellow tile start -->
+    <div class="wu-my-coupons__tile-outer">
+      <div class="wu-my-coupons__tile">
+        <a class="wu-my-coupons__inner-wrap">
+          <div class="wu-my-coupons__qr">
+            <img src="../assets/images/coupon-qr1.png">
           </div>
-        </div>
+          <div>
+            <div class="wu-my-coupons__tile-head">Stamp for Transaction</div>
+            <div class="wu-my-coupons__tile-desc">Collect this stamp when you do a remmit</div>
+          </div>
+        </a>
+        <a class="wu-my-coupons__arrow-right">
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M16.8021 30.8736C8.99586 30.8736 2.66013 24.5205 2.66013 16.6929C2.66013 8.86524 8.99586 2.5121 16.8021 2.5121C24.6084 2.5121 30.9441 8.86524 30.9441 16.6929C30.9441 24.5205 24.6084 30.8736 16.8021 30.8736ZM16.8021 0C7.61615 0 0.16394 7.47264 0.16394 16.6838C0.16394 25.8949 7.61615 33.3675 16.8021 33.3675C25.9881 33.3675 33.4403 25.8949 33.4403 16.6838C33.4403 7.47264 25.9881 0 16.8021 0Z"
+              fill="black" />
+            <path
+              d="M25.9098 17.2939C26.2446 16.9464 26.2446 16.4205 25.9098 16.073L17.703 7.54536C17.3682 7.21665 16.8525 7.21665 16.5449 7.54536L15.9658 8.14644C15.631 8.49393 15.631 9.01985 15.9658 9.36734L21.7566 15.3968H9.31519C8.85373 15.3968 8.48282 15.7725 8.48282 16.2608V17.1061C8.48282 17.585 8.84468 17.9701 9.31519 17.9701H21.7386L15.9476 23.9995C15.6129 24.347 15.6129 24.873 15.9476 25.2205L16.5267 25.8215C16.8615 26.1502 17.3681 26.1502 17.6848 25.8215L25.9007 17.2939H25.9188H25.9098Z"
+              fill="black" />
+          </svg>
+        </a>
+
+
+      </div>
+      <div class="wu-my-coupons__tile-black">
+        <ul class="wu-my-coupons__tile-list">
+          <li>Terms & conditions apply. Available for redemption on the 2nd transaction.
+          </li>
+          <li>Redeemable at all Western Union Outlets in SG.</li>
+          <li>Not valid with any other discounts & promotions.</li>
+          <li>No cash value.</li>
+          <li>Promo ends: 30 April 2023.</li>
+        </ul>
+        <a class="wu-my-coupons__arrow-left">
+          <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M17.604 3.18303C25.4103 3.18303 31.746 9.53614 31.746 17.3638C31.746 25.1914 25.4103 31.5445 17.604 31.5445C9.79776 31.5445 3.46202 25.1914 3.46202 17.3638C3.46202 9.53614 9.79776 3.18303 17.604 3.18303ZM17.604 34.0566C26.79 34.0566 34.2422 26.584 34.2422 17.3729C34.2422 8.16176 26.79 0.689121 17.604 0.68912C8.41805 0.689119 0.965838 8.16176 0.965837 17.3729C0.965836 26.584 8.41805 34.0566 17.604 34.0566Z"
+              fill="#FEDD00" />
+            <path
+              d="M8.49612 16.7627C8.16134 17.1102 8.16134 17.6361 8.49612 17.9836L16.703 26.5113C17.0377 26.84 17.5534 26.84 17.8611 26.5113L18.4402 25.9102C18.7749 25.5627 18.7749 25.0368 18.4402 24.6893L12.6494 18.6598L25.0907 18.6598C25.5522 18.6598 25.9231 18.2842 25.9231 17.7958L25.9231 16.9506C25.9231 16.4716 25.5612 16.0865 25.0907 16.0865L12.6674 16.0865L18.4583 10.0571C18.7931 9.7096 18.7931 9.18365 18.4583 8.83616L17.8792 8.23511C17.5444 7.9064 17.0378 7.9064 16.7211 8.23511L8.50518 16.7627L8.48707 16.7627L8.49612 16.7627Z"
+              fill="#FEDD00" />
+          </svg>
+
+        </a>
       </div>
     </div>
-    <!-- Modal -->
-    <div class="modal fade wu-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <!-- <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div> -->
-          <div class="modal-body wu-modal__body">
-            <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <div class="wu-coupon__img">
-                <img src="../assets/images/modal-qr.png" alt="QR code">
-              </div>
-            </div>
-          </div>
-          <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div> -->
-        </div>
-      </div>
-      </div>
-    <!-- Coupon end -->
+    <!-- Yellow tile ends -->
 
-    <!--Redeemed Coupon start -->
-    <div href="#" class="wu-coupon wu-coupon--redeemed">
-      <div class="wu-coupon__left">
-        <div class="wu-coupon__img">
-          <img src="../assets/images/coupon-qr.png" alt="QR code">
-        </div>
-        <div class="wu-coupon__share">
-          <img src="../assets/images/coupon-share.svg" alt="">
-        </div>
+    <!-- Blue tile start -->
+    <div class="wu-my-coupons__tile-outer">
+      <div class="wu-my-coupons__tile wu-my-coupons__tile--blue">
+        <a class="wu-my-coupons__inner-wrap">
+          <div class="wu-my-coupons__qr">
+            <img src="../assets/images/coupon-qr1.png">
+          </div>
+          <div>
+            <div class="wu-my-coupons__tile-head">Stamp for Transaction</div>
+            <div class="wu-my-coupons__tile-desc">Collect this stamp when you do a remmit</div>
+          </div>
+        </a>
+        <a class="wu-my-coupons__arrow-right">
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M16.8021 30.8736C8.99586 30.8736 2.66013 24.5205 2.66013 16.6929C2.66013 8.86524 8.99586 2.5121 16.8021 2.5121C24.6084 2.5121 30.9441 8.86524 30.9441 16.6929C30.9441 24.5205 24.6084 30.8736 16.8021 30.8736ZM16.8021 0C7.61615 0 0.16394 7.47264 0.16394 16.6838C0.16394 25.8949 7.61615 33.3675 16.8021 33.3675C25.9881 33.3675 33.4403 25.8949 33.4403 16.6838C33.4403 7.47264 25.9881 0 16.8021 0Z"
+              fill="black" />
+            <path
+              d="M25.9098 17.2939C26.2446 16.9464 26.2446 16.4205 25.9098 16.073L17.703 7.54536C17.3682 7.21665 16.8525 7.21665 16.5449 7.54536L15.9658 8.14644C15.631 8.49393 15.631 9.01985 15.9658 9.36734L21.7566 15.3968H9.31519C8.85373 15.3968 8.48282 15.7725 8.48282 16.2608V17.1061C8.48282 17.585 8.84468 17.9701 9.31519 17.9701H21.7386L15.9476 23.9995C15.6129 24.347 15.6129 24.873 15.9476 25.2205L16.5267 25.8215C16.8615 26.1502 17.3681 26.1502 17.6848 25.8215L25.9007 17.2939H25.9188H25.9098Z"
+              fill="black" />
+          </svg>
+        </a>
+
+
       </div>
-      <div class="wu-coupon__right">
-        <div class="wu-coupon__status">
-          Redeemed
-        </div>
-        <div class="wu-coupon__price">
-          $<span>5.00</span>
-        </div>
-        <div class="wu-coupon__transac">
-          Transaction total of <span>$500</span> 
-        </div>
-        <div class="wu-coupon__valid">
-          Valid until 30 April 2023
-        </div>
-        <div class="wu-coupon__right_arrow">
-          <svg viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_26_53817)">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M2.03992 0.0674234L9.93184 7.83638C10.0243 7.92302 10.0243 8.07224 9.93184 8.16369L2.03992 15.9326C1.95229 16.0241 1.83057 16.0241 1.73807 15.9326L0 14.2142L6.14898 8.16369C6.2074 8.07705 6.2074 7.92783 6.14898 7.83638L0 1.78583L1.73807 0.0674234C1.82571 -0.0192192 1.94742 -0.0192192 2.03992 0.0674234Z" fill="#FFDD00"/>
-            </g>
-            <defs>
-            <clipPath id="clip0_26_53817">
-            <rect width="10" height="16" fill="white"/>
-            </clipPath>
-            </defs>
-            </svg>
-        </div>
+      <div class="wu-my-coupons__tile-black">
+        <ul class="wu-my-coupons__tile-list">
+          <li>Terms & conditions apply. Available for redemption on the 2nd transaction.
+          </li>
+          <li>Redeemable at all Western Union Outlets in SG.</li>
+          <li>Not valid with any other discounts & promotions.</li>
+          <li>No cash value.</li>
+          <li>Promo ends: 30 April 2023.</li>
+        </ul>
+        <a class="wu-my-coupons__arrow-left">
+          <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M17.604 3.18303C25.4103 3.18303 31.746 9.53614 31.746 17.3638C31.746 25.1914 25.4103 31.5445 17.604 31.5445C9.79776 31.5445 3.46202 25.1914 3.46202 17.3638C3.46202 9.53614 9.79776 3.18303 17.604 3.18303ZM17.604 34.0566C26.79 34.0566 34.2422 26.584 34.2422 17.3729C34.2422 8.16176 26.79 0.689121 17.604 0.68912C8.41805 0.689119 0.965838 8.16176 0.965837 17.3729C0.965836 26.584 8.41805 34.0566 17.604 34.0566Z"
+              fill="#FEDD00" />
+            <path
+              d="M8.49612 16.7627C8.16134 17.1102 8.16134 17.6361 8.49612 17.9836L16.703 26.5113C17.0377 26.84 17.5534 26.84 17.8611 26.5113L18.4402 25.9102C18.7749 25.5627 18.7749 25.0368 18.4402 24.6893L12.6494 18.6598L25.0907 18.6598C25.5522 18.6598 25.9231 18.2842 25.9231 17.7958L25.9231 16.9506C25.9231 16.4716 25.5612 16.0865 25.0907 16.0865L12.6674 16.0865L18.4583 10.0571C18.7931 9.7096 18.7931 9.18365 18.4583 8.83616L17.8792 8.23511C17.5444 7.9064 17.0378 7.9064 16.7211 8.23511L8.50518 16.7627L8.48707 16.7627L8.49612 16.7627Z"
+              fill="#FEDD00" />
+          </svg>
+
+        </a>
       </div>
     </div>
-    <!--Redeemed Coupon end -->
+    <!-- Blue tile ends -->
 
-    <!-- scripts -->
-    <script src="../assets/js/jquery.slim.min.js"></script>
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/slick.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <!-- scripts -->
-  </body>
+    <!-- Redeem tile start -->
+    <div class="wu-my-coupons__tile-outer">
+      <div class="wu-my-coupons__tile wu-my-coupons__tile--redeem">
+        <a class="wu-my-coupons__inner-wrap">
+          <div class="wu-my-coupons__qr">
+            <img src="../assets/images/coupon-qr1.png">
+          </div>
+          <div>
+            <div class="wu-my-coupons__tile-head">Stamp for Transaction</div>
+            <div class="wu-my-coupons__tile-desc">Collect this stamp when you do a remmit</div>
+          </div>
+        </a>
+        <a class="wu-my-coupons__arrow-right">
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M16.8021 30.8736C8.99586 30.8736 2.66013 24.5205 2.66013 16.6929C2.66013 8.86524 8.99586 2.5121 16.8021 2.5121C24.6084 2.5121 30.9441 8.86524 30.9441 16.6929C30.9441 24.5205 24.6084 30.8736 16.8021 30.8736ZM16.8021 0C7.61615 0 0.16394 7.47264 0.16394 16.6838C0.16394 25.8949 7.61615 33.3675 16.8021 33.3675C25.9881 33.3675 33.4403 25.8949 33.4403 16.6838C33.4403 7.47264 25.9881 0 16.8021 0Z"
+              fill="black" />
+            <path
+              d="M25.9098 17.2939C26.2446 16.9464 26.2446 16.4205 25.9098 16.073L17.703 7.54536C17.3682 7.21665 16.8525 7.21665 16.5449 7.54536L15.9658 8.14644C15.631 8.49393 15.631 9.01985 15.9658 9.36734L21.7566 15.3968H9.31519C8.85373 15.3968 8.48282 15.7725 8.48282 16.2608V17.1061C8.48282 17.585 8.84468 17.9701 9.31519 17.9701H21.7386L15.9476 23.9995C15.6129 24.347 15.6129 24.873 15.9476 25.2205L16.5267 25.8215C16.8615 26.1502 17.3681 26.1502 17.6848 25.8215L25.9007 17.2939H25.9188H25.9098Z"
+              fill="black" />
+          </svg>
+        </a>
+
+
+      </div>
+      <div class="wu-my-coupons__tile-black">
+        <ul class="wu-my-coupons__tile-list">
+          <li>Terms & conditions apply. Available for redemption on the 2nd transaction.
+          </li>
+          <li>Redeemable at all Western Union Outlets in SG.</li>
+          <li>Not valid with any other discounts & promotions.</li>
+          <li>No cash value.</li>
+          <li>Promo ends: 30 April 2023.</li>
+        </ul>
+        <a class="wu-my-coupons__arrow-left">
+          <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M17.604 3.18303C25.4103 3.18303 31.746 9.53614 31.746 17.3638C31.746 25.1914 25.4103 31.5445 17.604 31.5445C9.79776 31.5445 3.46202 25.1914 3.46202 17.3638C3.46202 9.53614 9.79776 3.18303 17.604 3.18303ZM17.604 34.0566C26.79 34.0566 34.2422 26.584 34.2422 17.3729C34.2422 8.16176 26.79 0.689121 17.604 0.68912C8.41805 0.689119 0.965838 8.16176 0.965837 17.3729C0.965836 26.584 8.41805 34.0566 17.604 34.0566Z"
+              fill="#FEDD00" />
+            <path
+              d="M8.49612 16.7627C8.16134 17.1102 8.16134 17.6361 8.49612 17.9836L16.703 26.5113C17.0377 26.84 17.5534 26.84 17.8611 26.5113L18.4402 25.9102C18.7749 25.5627 18.7749 25.0368 18.4402 24.6893L12.6494 18.6598L25.0907 18.6598C25.5522 18.6598 25.9231 18.2842 25.9231 17.7958L25.9231 16.9506C25.9231 16.4716 25.5612 16.0865 25.0907 16.0865L12.6674 16.0865L18.4583 10.0571C18.7931 9.7096 18.7931 9.18365 18.4583 8.83616L17.8792 8.23511C17.5444 7.9064 17.0378 7.9064 16.7211 8.23511L8.50518 16.7627L8.48707 16.7627L8.49612 16.7627Z"
+              fill="#FEDD00" />
+          </svg>
+
+        </a>
+      </div>
+    </div>
+    <!-- Redeem tile ends -->
+  </div>
+
+  <!-- scripts -->
+  <script src="../assets/js/jquery.slim.min.js"></script>
+  <script src="../assets/js/aos.js"></script>
+  <script src="../assets/js/slick.min.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/script.js"></script>
+  <!-- scripts -->
+</body>
+
 </html>
